--- a/index.html
+++ b/index.html
@@ -48,22 +48,24 @@
     <h2 class="overlay-title">Game Rules</h2>
     <p class="overlay-text">
       Welcome to Star Nim, a variant of the classic combinatorial game 'Nim'. A player's action each turn is simply removing a token from the board 
-      by selecting it and then clicking it.
+      by selecting it and then clicking it. 
       <img src="images/1.png" alt="first placement" style="display: block; margin: 1rem auto; max-width: 100%; height: auto;" /> 
       The objective of this game is to be the <i>last</i> person to remove a token. 
-      It is often the case that some tokens are 'connected' to the selected token by a line. 
-      <img src="images/2.png" alt="first placement" style="display: block; margin: 1rem auto; max-width: 100%; height: auto;" /> 
-      If there are two such tokens, you'll need to first select one of the two 
+      <br></br>
+      It is often the case that tokens are 'connected' to each other by a line. 
+      <img src="images/2.png" alt="first placement" style="display: block; margin: 1rem auto; max-width: 100%; height: auto;" />
+      When such a connection exists, you have the option of removing <u>both</u> tokens instead of just one. 
+      <br></br>
+      If there are two such connections, you will have to choose between the two.
       <img src="images/3.png" alt="first placement" style="display: block; margin: 1rem auto; max-width: 100%; height: auto;" /> 
-      and then click either of the selected tokens once more to remove both. 
+      Then, click either of the selected tokens once more to remove both:
       <img src="images/4.png" alt="first placement" style="display: block; margin: 1rem auto; max-width: 100%; height: auto;" /> 
-      If there is only one token connected to the selected one (i.e. one connected token has already been removed), 
+      If there is only one token connected to the selected one (i.e. one connected token has already been removed), the choice is now just between removing itself or removing both.
       <img src="images/5.png" alt="first placement" style="display: block; margin: 1rem auto; max-width: 100%; height: auto;" /> 
-      clicking on the selected token automatically removes its partner. 
-      <img src="images/6.png" alt="first placement" style="display: block; margin: 1rem auto; max-width: 100%; height: auto;" /> 
+      Again – once selected – either token can be clicked to remove both.
       If there are none connected to the selected token, 
       <img src="images/7.png" alt="first placement" style="display: block; margin: 1rem auto; max-width: 100%; height: auto;" /> 
-      it is still possible to remove the token on its own but – of course – it will not remove any other tokens along with it. 
+      you can remove it as per usual, but only that token.
       <img src="images/8.png" alt="first placement" style="display: block; margin: 1rem auto; max-width: 100%; height: auto;" /> 
       Play continues in this way until there are no tokens left on the board.
       As previously mentioned, the first person to remove all of the tokens wins. It is <strong>not</strong> necessary that only one token can be removed to win.
